Fix tiny text on mobile

--- a/proftee/css/master.css
+++ b/proftee/css/master.css
@@ -19,3 +19,10 @@ div.carousel-caption{
   border-radius: 10px;
   padding: 10px;
 }
+
+
+@media screen and (max-width: 480px) {
+  body{
+    font-size: 150% !important;
+  }
+}
